--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngtools/webpack": "^1.7.1",
     "@types/lodash": "^4.14.74",
     "angular2-template-loader": "^0.6.2",
+    "angular2-toaster": "^4.0.1",
     "awesome-typescript-loader": "^3.2.3",
     "core-js": "^2.5.1",
     "hammerjs": "^2.0.8",
